gravity attr and setters

--- a/checkabletextview/src/main/res/values/attrs.xml
+++ b/checkabletextview/src/main/res/values/attrs.xml
@@ -9,6 +9,22 @@
 		<attr name="ctv_TextStyle" format="reference|integer"/>
 		<attr name="ctv_Icon" format="reference|integer"/>
 		<attr name="ctv_IconChecked" format="boolean"/>
+		<attr name="ctv_TextGravity">
+			<flag name="bottom" value="80" />
+			<flag name="center" value="17" />
+			<flag name="center_horizontal" value="1" />
+			<flag name="center_vertical" value="16" />
+			<flag name="clip_horizontal" value="8" />
+			<flag name="clip_vertical" value="128" />
+			<flag name="end" value="8388613" />
+			<flag name="fill" value="119" />
+			<flag name="fill_horizontal" value="7" />
+			<flag name="fill_vertical" value="112" />
+			<flag name="left" value="3" />
+			<flag name="right" value="5" />
+			<flag name="start" value="8388611" />
+			<flag name="top" value="48" />
+		</attr>
 	</declare-styleable>
 	
 </resources>
