--- a/checkabletextview/src/main/res/values/attrs.xml
+++ b/checkabletextview/src/main/res/values/attrs.xml
@@ -13,6 +13,7 @@
 		<attr name="ctv_AnimType" format="enum">
 			<enum name="scale" value="0"/>
 			<enum name="translate" value="1"/>
+			<enum name="fall_down" value="2"/>
 		</attr>
 		<attr name="ctv_TextGravity">
 			<flag name="bottom" value="80" />
