default check state disabled bug fixes and animate first time option added further improvements

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
             android:id="@+id/checkedTV"
             app:ctv_TextStyle="@style/TextAppearance.General"
             app:ctv_IconTint="@color/colorPrimary"
-            app:ctv_IconChecked="true"
+            app:ctv_IconChecked="false"
             android:background="#e8e8e8"
             app:ctv_Text="@string/app_name"
             app:ctv_AnimDuration="1250"
@@ -39,8 +39,7 @@
             android:background="#e8e8e8"
             android:id="@+id/checkedSecondTV"
             app:ctv_TextStyle="@style/TextAppearance.General"
-
-            app:ctv_IconChecked="true"
+            app:ctv_IconChecked="false"
             app:ctv_AnimType="scale"
             app:ctv_Icon="@drawable/ic_cancel_custom_vector"
             app:ctv_Text="@string/app_name"
@@ -66,7 +65,7 @@
             android:id="@+id/checkedThirdTV"
             app:ctv_TextStyle="@style/TextAppearance.General"
             app:ctv_IconTint="@color/colorOrange"
-            app:ctv_IconChecked="true"
+            app:ctv_IconChecked="false"
             app:ctv_AnimType="fall_down"
             app:ctv_Text="@string/app_name"
             android:layout_width="match_parent"
